# AI-Wealth-Management

./: README.md
backend/: .coverage  README.md  alembic.ini  pyproject.toml  requirements.txt  wealth_ai.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  factory.py  llm.py  llm_chat_responder.py  orchestrator.py
backend/app/core/: config.py  dependencies.py  exceptions.py  logging.py  login_throttle.py  metrics.py  observability.py  security.py  security_audit.py  security_middleware.py
backend/app/db/: __init__.py  base.py  repositories.py  seed.py  session.py
backend/app/models/: account.py  analytics.py  avatar.py  chat.py  fraud.py  goal.py  investment.py  notification.py  portfolio.py  prediction.py  profile.py  spending.py  user.py
backend/app/rag/: __init__.py  chunking.py  embeddings.py  knowledge.py  retriever.py  vector_store.py
backend/app/repositories/: account_repository.py  analytics_repository.py  avatar_repository.py  chat_repository.py  fraud_repository.py  goal_repository.py  investment_repository.py  notification_repository.py  portfolio_repository.py  profile_repository.py  spending_repository.py  user_repository.py
backend/app/schemas/: analytics.py  auth.py  avatar.py  banking.py  chat.py  financial_health.py  fraud.py  goals.py  notifications.py  portfolio.py  predictive.py  profile.py  recommendations.py  spending.py  voice.py
backend/app/services/: analytics_service.py  auth_service.py  avatar_presenter.py  avatar_service.py  (+19 more)
(+299 files in other folders)
