[project]
name = "idbi-wealth-ai-backend"
version = "0.1.0"
description = "Cloud-native FastAPI AI backend for the IDBI Wealth AI SDK."
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*", "app/db/seed.py", "alembic/*"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses Depends() in defaults

[tool.ruff.lint.per-file-ignores]
# The knowledge corpus and seed data are long literal rows; tests use long strings.
"app/rag/knowledge.py" = ["E501"]
"app/db/seed.py" = ["E501"]
"app/tests/*" = ["E501"]
